src/tests/snapshots/tera__tests__rendering__rendering_errors@negating_non_number.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/negating_non_number.html
---
 Rendering error --> ["negating_non_number.html":1:5]
  |
1 | {{ - vectors }}
  |      ^---
  = Only numbers can be negated. This is a `array`
