src/tests/snapshots/tera__tests__rendering__rendering_errors@super_in_top_blocks.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/super_in_top_blocks.html
---
 Rendering error --> ["super_in_top_blocks.html":2:3]
  |
2 | {{ super() }}
  |    ^---
  = Tried to use super() in the top level block
