src/tests/snapshots/tera__tests__rendering__rendering_errors@unknown_field.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/unknown_field.html
---
 Rendering error --> ["unknown_field.html":1:8]
  |
1 | {{ name.unknown }}
  |         ^---
  = Tried to render a variable that is not defined
