src/tests/snapshots/tera__tests__rendering__rendering_errors@unknown_field_in_loop.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/unknown_field_in_loop.html
---
 Rendering error --> ["unknown_field_in_loop.html":3:5]
  |
3 | {{ r.random }}
  |      ^---
  = Tried to render a variable that is not defined
