src/tests/snapshots/tera__tests__rendering__rendering_errors@unknown_subscript.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/unknown_subscript.html
---
 Rendering error --> ["unknown_subscript.html":1:3]
  |
1 | {{ username[unknown] }}
  |    ^---
  = Container is not defined
