src/tests/snapshots/tera__tests__rendering__rendering_errors@unknown_subscript.txt.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/unknown_subscript.txt
---
 Rendering error --> ["unknown_subscript.txt":1:3]
  |
1 | {{ username[unknown] }}
  |    ^---
  = Container is not defined
