src/tests/snapshots/tera__tests__rendering__rendering_errors@unknown_top_field.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/unknown_top_field.html
---
 Rendering error --> ["unknown_top_field.html":1:3]
  |
1 | {{ unknown.username }}
  |    ^---
  = Container is not defined
